fixed the date overflow on the twitter feed

--- a/sites/all/themes/lapcat/less/compiled.css
+++ b/sites/all/themes/lapcat/less/compiled.css
@@ -390,7 +390,7 @@ li {
 .twitterImage {
   display: inline-block;
   float: left;
-  height: 64px;
+  height: 5.8em;
 }
 
 .navDisplay {
