--- a/sites/all/themes/lapcat/less/layout.less
+++ b/sites/all/themes/lapcat/less/layout.less
@@ -178,7 +178,7 @@ li {
 .twitterImage{
   display:          inline-block;
   float:            left;
-  height:           64px;
+  height:           5.8em;
 }
 .navDisplay{
   margin-bottom:    1em;
